// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "github.com/thalissonfelipe/banking";

package banking;

import "google/protobuf/timestamp.proto";

service BankingService {
  rpc GetAccounts(ListAccountsRequest) returns (ListAccountsResponse) {};
  rpc GetAccountBalance(GetAccountBalanceRequest) returns (GetAccountBalanceResponse) {};
  rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse) {};

  rpc Login(LoginRequest) returns (LoginResponse) {};

  rpc GetTransfers(ListTransfersRequest) returns (ListTransfersResponse) {};
}

message ListAccountsRequest {}

message ListAccountsResponse {
    repeated Account accounts = 1;
}

message GetAccountBalanceResponse {
    int64 balance = 1;
}

message GetAccountBalanceRequest {
    string account_id = 1;
}

message Account {
    string id = 1;
    string name = 2;
    string cpf = 3;
    int64 balance = 4;
    google.protobuf.Timestamp created_at = 5;
}

message CreateAccountRequest {
    string name = 1;
    string cpf = 2;
    string secret = 3;
}

message CreateAccountResponse {
    string id = 1;
}

message LoginRequest {
    string cpf = 1;
    string secret = 2;
}

message LoginResponse {
    string token = 1;
}

message ListTransfersRequest {
    string account_id = 1;
}

message ListTransfersResponse {
    repeated Transfer transfers = 1;
}

message Transfer {
    string id = 1;
    string account_destination_id = 2;
    int64 amount = 3;
    google.protobuf.Timestamp created_at = 4;
}
